@@ -53,12 +53,12 @@ public class OrderBdRepository implements OrderRepository {
     @Override
     public List<Order> findAllNotCompleted() {
         return repo.findAllByStatusNotIn(List.of(OrderStatus.CREATED, OrderStatus.COMPLETED, OrderStatus.REJECTED))
-                .stream().map(OrderEntity::toOrder).collect(Collectors.toList());
+                .stream().map(OrderEntity::toOrder).toList();
     }
 
     @Override
     public List<Order> findOrdersByStatusAndTimeInterval(OrderStatus status, OffsetDateTime startDateTime, OffsetDateTime endDateTime) {
         return repo.findAllByStatusIsAndCreatedDateTimeBetween(status, startDateTime, endDateTime)
-                .stream().map(OrderEntity::toOrder).collect(Collectors.toList());
+                .stream().map(OrderEntity::toOrder).toList();
     }
 }
